--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,19 @@ dependencies = [
 dev = [
     "ipykernel==6.29.5",
     "jupyter==1.1.1",
+    "justsdk>=1.1.2",
     "pytest==8.4.0",
     "ruff==0.11.13",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = ["-v", "-s"]
+filterwarnings = [
+    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
+    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning",
+    "ignore:n_jobs value.*overridden.*by setting random_state:UserWarning:umap.*",
+    "ignore:invalid escape sequence.*:DeprecationWarning:hdbscan.*",
+    "default::DeprecationWarning:tests.*",
+    "default::UserWarning:tests.*",
 ]
