--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# *//////////////*
+# //// CUSTOM ////
+# *//////////////*
+data/raw/*
+!data/raw/.gitkeep
