--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,10 @@ dev = [
     "ipykernel==6.29.5",
     "jupyter==1.1.1",
     "justsdk>=1.1.2",
+    "matplotlib==3.10.3",
     "pytest==8.4.0",
     "ruff==0.11.13",
+    "seaborn==0.13.2",
 ]
 
 [tool.pytest.ini_options]
