--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "peft==0.15.2",
     "pyannote-audio==3.3.2",
     "pymupdf==1.26.1",
+    "python-dotenv==1.1.0",
     "python-multipart==0.0.20",
     "pyyaml==6.0.2",
     "scikit-learn==1.5.2",
@@ -39,6 +40,8 @@ dev = [
     "jupyter==1.1.1",
     "justsdk>=1.1.2",
     "matplotlib==3.10.3",
+    "nb-clean==4.0.1",
+    "pre-commit==4.2.0",
     "pytest==8.4.0",
     "ruff==0.11.13",
     "seaborn==0.13.2",
