--- a/configs/misc/pre-commit.yaml
+++ b/configs/misc/pre-commit.yaml
@@ -2,7 +2,7 @@ repos:
   - repo: local
     hooks:
       - id: nb-clean
-        name: "Clean notebooks"
+        name: "nb-clean clean notebooks/"
         entry: uv
         language: system
         args: ["run", "nb-clean", "clean", "notebooks"]
@@ -11,7 +11,7 @@ repos:
         always_run: true
 
       - id: ruff-format
-        name: "ruff format code"
+        name: "ruff format"
         entry: uv
         language: system
         args: ["run", "ruff", "format"]
@@ -20,7 +20,7 @@ repos:
         always_run: true
 
       - id: ruff-check
-        name: "ruff check and fix"
+        name: "ruff check --fix"
         entry: uv
         language: system
         args: ["run", "ruff", "check", "--fix"]
