--- a/configs/datasets.yml
+++ b/configs/datasets.yml
@@ -2,8 +2,12 @@ datasets:
   ner:
     - name: allenai/scitldr
       description: Extreme Summarization of Scientific Documents
+
     - name: eriktks/conll2003
+
     - name: midas/semeval2017
       description: Abstracts of English scientific articles
+
     - name: DFKI-SLT/few-nerd
       description: Fine-grained manually annotated NER
+      config: supervised
