--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "peft==0.15.2",
     "pyannote-audio==3.3.2",
     "pymupdf==1.26.1",
+    "python-docx==1.2.0",
     "python-dotenv==1.1.0",
     "python-multipart==0.0.20",
     "pyyaml==6.0.2",
@@ -33,6 +34,7 @@ dependencies = [
     "transformers==4.45.2",
     "trl==0.11.0",
     "uvicorn[standard]==0.34.3",
+    "wordcloud==1.9.4",
 ]
 
 [dependency-groups]
