--- a/config/datasets.yml
+++ b/config/datasets.yml
@@ -1,6 +1,8 @@
 ner:
-  - name: allenai/scitldr
-  - name: eriktks/conll2003
-  - name: midas/semeval2017
   - name: DFKI-SLT/few-nerd
     config: supervised
+  - name: eriktks/conll2003
+
+summary:
+  - name: allenai/scitldr
+  - name: midas/semeval2017
