chore: Include eesuhn/ datasets

--- a/config/datasets.yml
+++ b/config/datasets.yml
@@ -2,6 +2,9 @@ ner:
   - name: DFKI-SLT/few-nerd
     config: supervised
   - name: eriktks/conll2003
+  - name: eesuhn/crossner-ai
+  - name: eesuhn/crossner-science
+  - name: eesuhn/crossner-literature
 
 # summary:
 #   - name: allenai/scitldr
