--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,21 +19,17 @@ dependencies = [
     "peft==0.15.2",
     "pyannote-audio==3.3.2",
     "pymupdf==1.26.1",
-    "python-docx==1.2.0",
     "python-dotenv==1.1.0",
     "python-multipart==0.0.20",
-    "pyyaml==6.0.2",
     "scikit-learn==1.5.2",
     "sentence-transformers==4.1.0",
-    "spacy==3.8.7",
-    "span-marker==1.7.0",
-    "timm==1.0.15",
+    "seqeval==1.2.2",
     "torch==2.7.1",
     "torchaudio==2.7.1",
-    "torchvision==0.22.1",
     "transformers==4.45.2",
     "trl==0.11.0",
     "uvicorn[standard]==0.34.3",
+    "wandb==0.21.0",
     "wordcloud==1.9.4",
 ]
 
