--- a/.dvcignore
+++ b/.dvcignore
@@ -200,8 +200,13 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
+.DS_Store/
+
 # Model checkpoints
 models/**/checkpoints/
 
 # Temporary uploads
 data/uploads
+
+# Interim datasets
+data/interim
